--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.3",
+    "redux": "^4.1.2",
     "sass": "^1.49.0"
   },
   "scripts": {
